<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icon_app3"
        android:layout_marginStart="150dp"
        app:layout_constraintBottom_toTopOf="@id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btn_bantuan"
        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
        android:drawablePadding="25dp"
        android:backgroundTint="@color/teal_1000"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/bantuan"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/btn_tentang"
        android:drawableLeft="@drawable/ic_baseline_info"
        android:drawablePadding="25dp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tentang"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bantuan" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="your name"
        android:textStyle="italic"
        android:layout_marginLeft="150dp"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        tools:layout_editor_absoluteY="69dp"
        tools:ignore="MissingConstraints" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading1.json"
        app:lottie_loop="true" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/teal_1000"
        fab:menu_colorPressed="@color/teal_1000"
        fab:menu_colorRipple="#d1c2c2"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_baseline_dashboard_customize_24"
        fab:menu_labels_colorNormal="#666666"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowRadius="1dp"
        fab:menu_showShadow="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/home"
            fab:fab_size="mini" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabnutrisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_nutrition_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/nutrisi"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabartikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_article_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/artikel"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fablogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/logout"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>