<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.story.ArticleActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFoods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_article" >
    </androidx.recyclerview.widget.RecyclerView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/teal_1000"
        fab:menu_colorPressed="@color/teal_1000"
        fab:menu_colorRipple="#d1c2c2"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_baseline_dashboard_customize_24"
        fab:menu_labels_colorNormal="#666666"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowRadius="1dp"
        fab:menu_showShadow="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/home"
            fab:fab_size="mini" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabnutrisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_nutrition_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/nutrisi"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabartikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_article_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/artikel"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabprofil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_24"
            fab:fab_colorNormal="@color/teal_1000"
            fab:fab_colorPressed="@color/white"
            fab:fab_label="@string/profil"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>